Doc/force-app/main/default/objects/QuoteLineItem/fields/EmptyField__c.field-meta.xml
<CustomField>
    <fullName>EmptyField__c</fullName>
    <formula>UnitPrice</formula>
    <label>.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>