Doc/force-app/main/default/objects/QuoteLineItem/fields/IM__c.field-meta.xml
<CustomField>
    <fullName>IM__c</fullName>
    <formula>Product2.Item_Master_Product__r.Intapp_Item_Master_Number__c</formula>
    <label>IM#</label>
    <type>Text</type>
</CustomField>