Doc/force-app/main/default/objects/QuoteLineItem/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <formula>Product2.Item_Master_Product__r.Item_Name__c</formula>
    <label>Product</label>
    <type>Text</type>
</CustomField>