Doc/force-app/main/default/objects/QuoteLineItem/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>TEXT(Product2.Product_Type__c)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>